WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257748
Fix -Werror=unused-function when building LLIntData.cpp with cloop enabled
https://bugs.webkit.org/show_bug.cgi?id=257748
Summary
Fix -Werror=unused-function when building LLIntData.cpp with cloop enabled
Michael Catanzaro
Reported
2023-06-06 07:45:02 PDT
In file included from /home/mcatanzaro/Projects/WebKit/WebKitBuild/JSCOnly/JavaScriptCore/DerivedSources/unified-sources/UnifiedSource-6e4525b9-1.cpp:2: /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/llint/LLIntData.cpp:73:13: error: ‘void JSC::LLInt::neuterOpcodeMaps()’ defined but not used [-Werror=unused-function] 73 | static void neuterOpcodeMaps() | ^~~~~~~~~~~~~~~~
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-06-06 08:04:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14697
EWS
Comment 2
2023-06-06 09:03:25 PDT
Committed
264899@main
(ca8b1a25fea8): <
https://commits.webkit.org/264899@main
> Reviewed commits have been landed. Closing PR #14697 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-06-06 09:04:37 PDT
<
rdar://problem/110326174
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug