Fix -Werror=unused-function when building LLIntData.cpp with cloop enabled https://bugs.webkit.org/show_bug.cgi?id=257748

Unreviewed fix for JSCOnly cloop builds using build-webkit (where
warnings are fatal).

* Source/JavaScriptCore/llint/LLIntData.cpp:

Canonical link: https://commits.webkit.org/264899@main